syntax = "proto3";

option go_package = "github.com/virtual-disk-array/vda/pkg/proto/cnagentapi";

package cnagentapi;

service CnAgent {
  rpc SyncupCn(SyncupCnRequest) returns(SyncupCnReply) {}
  rpc CnHeartbeat(CnHeartbeatRequest) returns(CnHeartbeatReply) {}
  rpc BdevGetMetrics (BdevMetricsRequest) returns (BdevMetricsReply) {}
}

message ReplyInfo {
  uint64 reply_code = 1;
  string reply_msg = 2;
}

message ErrInfo {
  bool is_err = 1;
  string err_msg = 2;
  string timestamp = 3;
}

message LvsConf {
  uint32 cluster_size = 1;
  uint32 extend_ratio = 2;
}

message LvsInfo {
  uint64 total_data_clusters = 2;
  uint64 free_clusters = 3;
}

message Raid0Conf {
  uint32 strip_size_kb = 1;
  uint32 bdev_cnt = 2;
}

message Raid1Conf {
  uint32 bit_size_kb = 1;
}

message Raid1Info {
  bool bdev0_online = 1;
  bool bdev1_online = 2;
  uint64 total_bit = 3;
  uint64 synced_bit = 4;
  uint64 resync_io_cnt = 5;
  string status =  6;
}

message NvmfListener {
  string tr_type = 1;
  string adr_fam = 2;
  string tr_addr = 3;
  string tr_svc_id = 4;
}

message BdevIostat {
  uint64 tick_rate = 1;
  uint64 bytes_read = 2;
  uint64 num_read_ops = 3;
  uint64 bytes_written = 4;
  uint64 num_write_ops = 5;
  uint64 bytes_unmapped = 6;
  uint64 num_unmap_ops = 7;
  uint64 read_latency_ticks = 8;
  uint64 write_latency_ticks = 9;
  uint64 unmap_latency_ticks = 10;
  uint64 queue_depth_polling_period = 11;
  uint64 queue_depth = 12;
  uint64 io_time = 13;
  uint64 weighted_io_time = 14;
}

message BdevHistogram {
  string histogram = 1;
  uint64 tsc_rate = 2;
  uint32 bucket_shift = 3;
}

message BdevMetrics {
  string snap_full_name = 1;
  string exp_id = 2;
  BdevIostat bdev_iostat = 3;
  BdevHistogram bdev_histogram = 4;
}

message Lvstore {
  uint64 free_clusters = 1;
  uint64 total_data_clusters = 2;
  uint64 cluster_size = 3;
  uint64 block_size = 4;
}

message Controller {
  string cntlr_id = 1;
  string cn_sock_addr = 2;
  uint32 cntlr_idx = 3;
  bool is_primary = 4;
  NvmfListener cn_nvmf_listener = 5;
}

message VdFeConf {
  NvmfListener dn_nvmf_listener = 1;
  string dn_sock_addr = 2;
  uint32 vd_idx = 3;
  uint64 size = 4;
}

message VdFeInfo {
  ErrInfo err_info = 1;
}

message GrpFeConf {
  uint32 grp_idx = 1;
  uint64 size = 2;
}

message GrpFeInfo {
  ErrInfo err_info = 2;
}

message SnapFeConf {
  string ori_id = 1;
  uint64 idx = 2;
  uint64 size = 3;
}

message SnapFeInfo {
  ErrInfo err_info = 1;
}

message ExpFeConf {
  string initiator_nqn = 1;
  string snap_id = 2;
  string da_name = 3;
  string exp_name = 4;
}

message ExpFeInfo {
  ErrInfo err_info = 1;
}

message MtFeConf {
  uint32 grp_idx = 1;
  uint32 vd_idx = 2;
  NvmfListener src_listener = 3;
  string src_vd_id = 4;
  NvmfListener dst_listener = 5;
  string dst_vd_id = 6;
  Raid1Conf raid1_conf = 7;
}

message MtFeInfo {
  ErrInfo err_info = 1;
  Raid1Info raid1_info = 2;
}

message ItFeConf {
  NvmfListener src_listener = 1;
  string snap_name = 2;
  Raid1Conf raid1_conf = 3;
}

message ItFeInfo {
  ErrInfo err_info = 1;
  Raid1Info raid1_info = 2;
}

message CntlrFeConf {
  string da_id = 1;
  repeated Controller cntlr_list = 2;
  uint64 size = 3;
  LvsConf lvs_conf = 4;
  Raid0Conf raid0_conf = 5;
  oneof redundancy {
    Raid1Conf raid1_conf = 6;
  }
}

message CntlrFeInfo {
  ErrInfo err_info = 1;
  LvsInfo lvs_info = 2;
  oneof redundancy {
    Raid1Info raid1_info = 3;
  }
}

message CnInfo {
  ErrInfo err_info = 1;
}

message VdFeReq {
  string vd_id = 1;
  VdFeConf vd_fe_conf = 2;
}

message GrpFeReq {
  string grp_id = 1;
  GrpFeConf grp_fe_conf = 2;
  repeated VdFeReq vd_fe_req_list = 3;
}

message SnapFeReq {
  string snap_id = 1;
  SnapFeConf snap_fe_conf = 2;
}

message ExpFeReq {
  string exp_id = 1;
  ExpFeConf exp_fe_conf = 2;
}

message MtFeReq {
  string mt_id = 1;
  MtFeConf mt_fe_conf = 2;
}

message ItFeReq {
  string it_id = 1;
  ItFeConf it_fe_conf = 2;
}

message CntlrFeReq {
  string cntlr_id = 1;
  CntlrFeConf cntlr_fe_conf = 2;
  bool is_inited = 3;
  repeated GrpFeReq grp_fe_req_list = 4;
  repeated SnapFeReq snap_fe_req_list = 5;
  repeated ExpFeReq exp_fe_req_list = 6;
  repeated MtFeReq mt_fe_req_list = 7;
  repeated ItFeReq it_fe_req_list = 8;
}

message CnReq {
  string cn_id = 1;
  repeated CntlrFeReq cntlr_fe_req_list = 2;
}

message SyncupCnRequest {
  string req_id = 1;
  uint64 version = 2;
  bool no_delete = 3;
  CnReq cn_req = 4;
}

message VdFeRsp {
  string vd_id = 1;
  VdFeInfo vd_fe_info = 2;
}

message GrpFeRsp {
  string grp_id = 1;
  GrpFeInfo grp_fe_info = 2;
  repeated VdFeRsp vd_fe_rsp_list = 3;
}

message SnapFeRsp {
  string snap_id = 1;
  SnapFeInfo snap_fe_info = 2;
}

message ExpFeRsp {
  string exp_id = 1;
  ExpFeInfo exp_fe_info = 2;
}

message MtFeRsp {
  string mt_id = 1;
  MtFeInfo mt_fe_info = 2;
}

message ItFeRsp {
  string it_id = 1;
  ItFeInfo it_fe_info = 2;
}

message CntlrFeRsp {
  string cntlr_id = 1;
  CntlrFeInfo cntlr_fe_info = 2;
  repeated GrpFeRsp grp_fe_rsp_list = 3;
  repeated SnapFeRsp snap_fe_rsp_list = 4;
  repeated ExpFeRsp exp_fe_rsp_list = 5;
  repeated MtFeRsp mt_fe_rsp_list = 6;
  repeated ItFeRsp it_fe_rsp_list = 7;
}

message CnRsp {
  string cn_id = 1;
  CnInfo cn_info = 2;
  repeated CntlrFeRsp cntlr_fe_rsp_list = 3;
}

message SyncupCnReply {
  ReplyInfo reply_info = 1;
  CnRsp cn_rsp = 2;
}

message CnHeartbeatRequest {
  string req_id = 1;
  uint64 version = 2;
}

message CnHeartbeatReply {
  ReplyInfo reply_info = 1;
}

message BdevMetricsRequest {
  string req_id = 1;
}

message BdevMetricsReply {
  ReplyInfo reply_info = 1;
  repeated BdevMetrics bdev_metrics = 2;
}
