syntax = "proto3";

option go_package = "github.com/virtual-disk-array/vda/pkg/proto/dataschema";

package dataschema;

message ErrInfo {
  bool is_err = 1;
  string err_msg = 2;
  string timestamp = 3;
}

message LvsConf {
  uint32 cluster_size = 1;
  uint32 extend_ratio = 2;
}

message LvsInfo {
  uint64 total_data_clusters = 1;
  uint64 free_clusters = 2;
}

message Raid0Conf {
  uint32 strip_size_kb = 1;
  uint32 bdev_cnt = 2;
}

message Raid1Conf {
  uint32 bit_size_kb = 1;
}

message Raid1Info {
  bool bdev0_online = 1;
  bool bdev1_online = 2;
  uint64 total_bit = 3;
  uint64 synced_bit = 4;
  uint64 resync_io_cnt = 5;
  string status =  6;
}

message PerRaid1Conf {
  uint32 grp_idx = 1;
  uint32 raid1_idx = 2;
  string single_healthy_val = 3;
}

message RedunRaid1Conf {
  Raid1Conf raid1_conf = 1;
  repeated PerRaid1Conf per_raid1_conf_list = 2;
}

message PerRaid1Info {
  uint32 grp_idx = 1;
  uint32 raid1_idx = 2;
  Raid1Info raid1_info = 3;
  string single_healthy_act = 4;
}

message RedunRaid1Info {
  repeated PerRaid1Info per_raid1_info_list = 1;
}

message TaskDescriptor {
  uint64 start_time = 1;
  uint64 stop_time = 2;
  uint64 keep_seconds = 3;
  string status = 4;
}

message NvmfListener {
  string tr_type = 1;
  string adr_fam = 2;
  string tr_addr = 3;
  string tr_svc_id = 4;
}

message BdevMalloc {
  uint64 size = 1;
}

message BdevAio {
  string file_name = 1;
}

message BdevNvme {
  string tr_addr = 1;
}

message BdevIostat {
  uint64 tick_rate = 1;
  uint64 bytes_read = 2;
  uint64 num_read_ops = 3;
  uint64 bytes_written = 4;
  uint64 num_write_ops = 5;
  uint64 bytes_unmapped = 6;
  uint64 num_unmap_ops = 7;
  uint64 read_latency_ticks = 8;
  uint64 write_latency_ticks = 9;
  uint64 unmap_latency_ticks = 10;
  uint64 queue_depth_polling_period = 11;
  uint64 queue_depth = 12;
  uint64 io_time = 13;
  uint64 weighted_io_time = 14;
}

message BdevHistgram {
  string histogram = 1;
  uint64 tsc_rate = 2;
  uint32 bucket_shift = 3;
}

message BdevQos {
  uint64 rw_ios_per_sec = 1;
  uint64 rw_mbytes_per_sec = 2;
  uint64 r_mbytes_per_sec = 3;
  uint64 w_mbytes_per_sec = 4;
}

message Controller {
  string cntlr_id = 1;
  string cn_sock_addr = 2;
  uint32 cntlr_idx = 3;
  bool is_primary = 4;
  NvmfListener cn_nvmf_listener = 5;
}

message VdBeConf {
  string da_name = 1;
  uint32 grp_idx = 2;
  uint32 vd_idx = 3;
  uint64 size = 4;
  BdevQos qos = 5;
  string cntlr_id = 6;
}

message VdBeInfo {
  ErrInfo err_info = 1;
}

message VdBackend {
  string vd_id = 1;
  VdBeConf vd_be_conf =  2;
  VdBeInfo vd_be_info = 3;
}

message PdConf {
  string description = 1;
  bool is_offline = 2;
  oneof bdev_type {
    BdevMalloc bdev_malloc = 3;
    BdevAio bdev_aio = 4;
    BdevNvme bdev_nvme = 5;
  }
}

message PdInfo {
  ErrInfo err_info = 1;
}

message PdCapacity {
  uint64 total_size = 1;
  uint64 free_size = 2;
  BdevQos total_qos = 3;
  BdevQos free_qos = 4;
}

message PhysicalDisk {
  string pd_id = 1;
  string pd_name = 2;
  PdConf pd_conf = 3;
  PdInfo pd_info = 4;
  PdCapacity capacity = 5;
  repeated VdBackend vd_be_list = 6;
}

message DnConf {
  string description = 1;
  NvmfListener nvmf_listener = 2;
  string location = 3;
  bool is_offline = 4;
  uint32 hash_code = 5;
}

message DnInfo {
  ErrInfo err_info = 1;
}

// /{vda_prefix}/dn/{sock_addr}
message DiskNode {
  string dn_id = 1;
  string sock_addr = 2;
  uint64 version = 3;
  DnConf dn_conf = 4;
  DnInfo dn_info = 5;
  repeated PhysicalDisk pd_list = 6;
}

message VdFeConf {
  NvmfListener dn_nvmf_listener = 1;
  string dn_sock_addr = 2;
  uint32 vd_idx = 3;
  uint64 size = 4;
}

message VdFeInfo {
  ErrInfo err_info = 1;
}

message VdFrontend {
  string vd_id = 1;
  VdFeConf vd_fe_conf = 2;
  VdFeInfo vd_fe_info = 3;
}

message GrpFeConf {
  uint32 grp_idx = 1;
  uint64 size = 2;
}

message GrpFeInfo {
  ErrInfo err_info = 1;
}

message GrpFrontend {
  string grp_id = 1;
  GrpFeConf grp_fe_conf = 2;
  GrpFeInfo grp_fe_info = 3;
  repeated VdFrontend vd_fe_list = 4;
}

message SnapFeConf {
  string ori_id = 1;
  uint64 idx = 2;
  uint64 size = 3;
}

message SnapFeInfo {
  ErrInfo err_info = 1;
}

message SnapFrontend {
  string snap_id = 1;
  SnapFeConf snap_fe_conf = 2;
  SnapFeInfo snap_fe_info = 3;
}

message ExpFeConf {
  string initiator_nqn = 1;
  string snap_id = 2;
  string da_name = 3;
  string exp_name = 4;
}

message ExpFeInfo {
  ErrInfo err_info = 1;
}

message ExpFrontend {
  string exp_id = 1;
  ExpFeConf exp_fe_conf = 2;
  ExpFeInfo exp_fe_info = 3;
}

message MtFeConf {
  uint32 grp_idx = 1;
  uint32 vd_idx = 2;
  NvmfListener src_listener = 3;
  string src_vd_id = 4;
  NvmfListener dst_listener = 5;
  string dst_vd_id = 6;
  Raid1Conf raid1_conf = 7;
}

message MtFeInfo {
  ErrInfo err_info = 1;
  Raid1Info raid1_info = 2;
}

message MtFrontend {
  string mt_id = 1;
  MtFeConf mt_fe_conf = 2;
  MtFeInfo mt_fe_info = 3;
}

message ItFeConf {
  NvmfListener src_listener = 1;
  string snap_name = 2;
}

message ItFeInfo {
  ErrInfo err_info = 1;
  Raid1Info raid1_info = 2;
}

message ItFrontend {
  string it_id = 1;
  ItFeConf it_fe_conf = 2;
  ItFeInfo it_fe_info = 3;
}

message CntlrFeConf {
  string da_id = 1;
  string da_name = 2;
  repeated Controller cntlr_list = 3;
  uint64 size = 4;
  LvsConf lvs_conf = 5;
  Raid0Conf raid0_conf = 6;
  oneof redundancy {
    RedunRaid1Conf redun_raid1_conf = 7;
  }
}

message CntlrFeInfo {
  ErrInfo err_info = 1;
  LvsInfo lvs_info = 2;
  oneof redundancy {
    RedunRaid1Info redun_raid1_info = 3;
  }
}

message CntlrFrontend {
  string cntlr_id = 1;
  CntlrFeConf cntlr_fe_conf = 2;
  CntlrFeInfo cntlr_fe_info = 3;
  bool is_inited = 4;
  repeated GrpFrontend grp_fe_list = 5;
  repeated SnapFrontend snap_fe_list = 6;
  repeated ExpFrontend exp_fe_list = 7;
  repeated MtFrontend mt_fe_list = 8;
  repeated ItFrontend it_fe_list = 9;
}

message CnConf {
  string description = 1;
  NvmfListener nvmf_listener = 2;
  string location = 3;
  bool is_offline = 4;
  uint32 hash_code = 5;
}

message CnInfo {
  ErrInfo err_info = 1;
}

message CnCapacity {
  uint32 cntlr_cnt = 1;
}

// /{vda_prefix}/cn/{sock_addr}
message ControllerNode {
  string cn_id = 1;
  string sock_addr = 2;
  uint64 version = 3;
  CnConf cn_conf = 4;
  CnInfo cn_info = 5;
  CnCapacity cn_capacity = 6;
  repeated CntlrFrontend cntlr_fe_list = 7;
}

message VirtualDisk {
  string vd_id = 1;
  uint32 vd_idx = 2;
  uint64 size = 3;
  string dn_sock_addr = 4;
  string pd_name = 5;
  BdevQos qos = 6;
}

message Group {
  string grp_id = 1;
  uint32 grp_idx = 2;
  uint64 size = 3;
  repeated VirtualDisk vd_list = 4;
}

message Snap {
  string snap_id = 1;
  string snap_name = 2;
  string description = 3;
  string ori_name = 4;
  uint64 idx = 5;
  uint64 size = 6;
}

message Exporter {
  string exp_id = 1;
  string exp_name = 2;
  string description = 3;
  string initiator_nqn = 4;
  string snap_name = 5;
}

message MovingTask {
  string mt_id = 1;
  string mt_name = 2;
  string description = 3;
  uint32 grp_idx = 4;
  uint32 vd_idx = 5;
  string src_sock_addr = 6;
  string src_pd_name = 7;
  string src_vd_id = 8;
  string dst_sock_addr = 9;
  string dst_pd_name = 10;
  string dst_vd_id = 11;
  TaskDescriptor desc = 12;
  Raid1Conf raid1_conf = 13;
}

message ImportingTask {
  string it_id = 1;
  string it_name = 2;
  string description = 3;
  NvmfListener src_listener = 4;
  string snap_name = 5;
  TaskDescriptor desc = 6;
}

message ExtendPolicy {
  uint64 init_grp_size = 1;
  uint64 max_grp_size = 2;
  uint64 low_water_mark = 3;
}

message DaConf {
  uint64 size = 1;
  BdevQos qos = 2;
  ExtendPolicy extend_policy = 3;
  LvsConf lvs_conf = 4;
  Raid0Conf raid0_conf = 5;
  oneof redundancy {
    RedunRaid1Conf redun_raid1_conf = 6;
  }
}

// /{vda_prefix}/da/{da_name}
message DiskArray {
  string da_id = 1;
  string da_name = 2;
  string description = 3;
  DaConf da_conf = 4;
  repeated Controller cntlr_list = 5;
  repeated Group grp_list = 6;
  repeated Snap snap_list = 7;
  repeated Exporter exp_list = 8;
  repeated MovingTask mt_list = 9;
  repeated ImportingTask it_list = 10;
}

// /{vda_prefix}/capacity/dn/{free_size@sock_addr@pd_name}
message DnSearchAttr {
  PdCapacity pd_capacity = 1;
  string location = 2;
}

// /{vda_prefix}/capacity/cn/{cntlr_cnt%sock_addr}
message CnSearchAttr {
  CnCapacity cn_capacity = 1;
  string location = 2;
}

// /{vda_prefix}/list/dn/{hash_code@sock_addr}
// /{vda_prefix}/error/dn/{hash_code@sock_addr}
message DnSummary {
  string sock_addr = 1;
  string description = 2;
}

// /{vda_prefix}/list/cn/{hash_code@sock_addr}
// /{vda_prefix}/error/cn/{hash_code@sock_addr}
message CnSummary {
  string sock_addr = 1;
  string description = 2;
}

// /{vda_prefix}/list/da/{da_name}
message DaSummary {
  string da_name = 1;
  string description = 2;
}
